# immutable-protobuf-api

./: .gitignore  MODULE.bazel  makefile
Example/: makefile  message_parser.h  reader.cpp  writer.cpp
Generator/: BUILD  README.md  generator.cc  mypb.bzl  taskas.proto  tester.cpp
Tester/: BUILD  graph.proto  makefile  mytester.cpp  officialtester.cpp
Tutorial example/: reader.cpp  writer.cpp
patches/: proto_visibility.patch
