module(
    name = "immutable_protobuf_api",
    version = "0.0.1",
)

bazel_dep(name = "protobuf", version = "31.0-dev")
bazel_dep(name = "google_benchmark", version = "1.8.2")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "rules_cc", version = "0.0.17")

single_version_override(
	module_name = "protobuf",
	version = "30.0",
	patches = [
		"//patches:proto_visibility.patch"
	],
	patch_strip = 1,
)
